--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body {
 
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 0 12px 2px #ccc;
+    /* box-shadow: 0 0 12px 2px #ccc; */
 }
 
 
@@ -132,4 +132,19 @@ body {
 
 #view-detail p{
     margin-bottom: 0;
+}
+
+.dim-screen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: #000;
+    opacity: .4;
+    z-index: 1000;
+    font-size: 0;
 }
